@@ -25,7 +25,7 @@
 .\" IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\" $P4: //depot/projects/trustedbsd/openbsm/bin/auditreduce/auditreduce.1#6 $
+.\" $P4: //depot/projects/trustedbsd/openbsm/bin/auditreduce/auditreduce.1#8 $
 .\"
 .Dd Jan 24, 2004
 .Dt AUDITREDUCE 1
@@ -84,7 +84,7 @@ Select records that occurred on a given date.
 This option cannot be used with
 .Fl a
 or
-.Fl b
+.Fl b .
 .It Fl e Ar euid
 Select records with the given effective user id or name.
 .It Fl f Ar egid
